--- a/style.css
+++ b/style.css
@@ -1,24 +1,28 @@
 /*---Google font---*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 /*---Bases---*/
-*
-{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body
-{
+/* .splide {
+  visibility: visible !important;
+} */
+
+body {
   font-family: 'Poppins', sans-serif;
 }
-ul
-{
-  list-style:none;
+
+ul {
+  list-style: none;
 }
-a
-{
-  text-decoration:none;
+
+a {
+  text-decoration: none;
 }
+
 /*---Header---*/
 /* .header
 {
@@ -31,73 +35,83 @@ a
 .logo img {
   width: 136px;
 }
-.navbar
-{
-  position:absolute;
-  width:100%;
-  padding-top:50px;
+
+.navbar {
+  position: absolute;
+  width: 100%;
+  padding-top: 50px;
   padding-left: 8%;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   z-index: 2;
   box-shadow: unset;
 }
-.navbar .logo
-{
-  font-size:2em;
-  font-weight:bold;
+
+.navbar .logo {
+  font-size: 2em;
+  font-weight: bold;
 }
+
 ul.nav-menu.nav-links {
-    display: flex;
-    margin: 0px 48px;
-    gap: 42px;
-    font-size: 18px;
-    font-weight: 500;
+  display: flex;
+  margin: 0px 48px;
+  gap: 42px;
+  font-size: 18px;
+  font-weight: 500;
 }
+
 ul.nav-menu :hover {
-    color: #ed3c57;
+  color: #ed3c57;
 }
+
 .dropdown-content a {
-    color: #000 !important;
-    font-size: 16px;
+  color: #000 !important;
+  font-size: 16px;
 }
-.dropdown-content a:hover{
-    color: #ed3c57 !important;
-    font-weight:600;
+
+.dropdown-content a:hover {
+  color: #ed3c57 !important;
+  font-weight: 600;
 }
-.navbar .nav-links ul li
-{
-  margin:0 25px;
+
+.navbar .nav-links ul li {
+  margin: 0 25px;
 }
-.navbar .nav-links ul li.active a
-{
-  color:#ed3c57;
-  font-weight:600;
+
+.navbar .nav-links ul li.active a {
+  color: #ed3c57;
+  font-weight: 600;
 }
-.navbar a 
-{
-  color:white;
+
+.navbar a {
+  color: white;
 }
-.navbar .menu-hamburger
-{
-  display:none;
-  color:white;
-  position:absolute;
-  top:50px;
-  right:50px;
-  font-size:35px;
-  cursor:pointer;
+
+.navbar .menu-hamburger {
+  display: none;
+  color: white;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  font-size: 35px;
+  cursor: pointer;
 }
-.carousel-caption{
+
+.carousel-caption {
   /* bottom: 1.25rem; */
   bottom: 17.25rem;
 }
+.carousel-caption h5 {
+  font-size: 38px;
+}
+
 .carousel-caption h3 {
   font-size: 38px;
 }
- /* Dropdown  Styling */
- .dropdown {
+
+/* Dropdown  Styling */
+.dropdown {
   display: inline-block;
 }
 
@@ -111,10 +125,11 @@ ul.nav-menu :hover {
   padding: 14px 8px 8px 14px;
 
 }
+
 .dropdown-content a {
   display: flex;
   flex-direction: column;
-margin-bottom: 14px;
+  margin-bottom: 14px;
 }
 
 .dropdown:hover .dropdown-content {
@@ -132,56 +147,69 @@ margin-bottom: 14px;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
 }
-@media screen and (max-width:900px)
-{
-  .navbar
-  {
-    padding:0;
-  }
-  .navbar .logo
-  {
-    display:none;
-  }
-  .navbar .menu-hamburger
-  {
-    display:block;
-  }
-  .nav-links
-  {
-    top:0;
-    left:-100%;
-    position:absolute;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-color:rgba(0,0,0,0.5);
-    backdrop-filter:blur(8px);
-    width:100%;
-    height:100vh;
-    transition: left 0.5s ease;
-    
-  }
-  .nav-links.mobile-menu
-  {
-  left:0;
-    
+
+/* header img slider */
+ .arrow-down {
+  bottom: 10px;
+  left: 0;
+  position: absolute;
+  right: 0
+}
+
+ .arrow-down p {
+  color: #fff;
+  text-align: center
+}
+
+/* header img slider End */
+@media screen and (max-width:900px) {
+  .navbar {
+    padding: 0;
   }
 
-  .nav-links ul
-  {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+  .navbar .logo {
+    display: none;
   }
-  .navbar .nav-links ul li
-  {
-  margin:25px 0;
-  font-size:1.2em;
+
+  .navbar .menu-hamburger {
+    display: block;
   }
-  .menu-hamburger
-  {
-    display:block;
+
+  .nav-links {
+    top: 0;
+    left: -100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px);
+    width: 100%;
+    height: 100vh;
+    transition: left 0.5s ease;
+
   }
+
+  .nav-links.mobile-menu {
+    left: 0;
+
+  }
+
+  .nav-links ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar .nav-links ul li {
+    margin: 25px 0;
+    font-size: 1.2em;
+  }
+
+  .menu-hamburger {
+    display: block;
+  }
+
   ul.nav-menu.nav-links {
     display: flex;
     gap: 42px;
