--- a/test.css
+++ b/test.css
@@ -2371,62 +2371,62 @@ textarea {
 }
 
 .load-cont .layers__item-img.img1 {
-    background-image: url(../img/1.jpg)
+    background-image: url(./img/1.jpg)
 }
 
 @media(max-width:575px) {
     .load-cont .layers__item-img.img1 {
-        background-image: url(../img/1-xs.jpg)
+        background-image: url(./img/1-xs.jpg)
     }
 }
 
 .load-cont .layers__item-img.img2 {
-    background-image: url(../img/4.jpg)
+    background-image: url(./img/4.jpg)
 }
 
 @media(max-width:575px) {
     .load-cont .layers__item-img.img2 {
-        background-image: url(../img/4-xs.jpg)
+        background-image: url(./img/4-xs.jpg)
     }
 }
 
 .load-cont .layers__item-img.img3 {
-    background-image: url(../img/10.jpg)
+    background-image: url(./img/10.jpg)
 }
 
 @media(max-width:575px) {
     .load-cont .layers__item-img.img3 {
-        background-image: url(../img/10-xs.jpg)
+        background-image: url(./img/10-xs.jpg)
     }
 }
 
 .load-cont .layers__item-img.img4 {
-    background-image: url(../img/2.jpg)
+    background-image: url(./img/2.jpg)
 }
 
 @media(max-width:575px) {
     .load-cont .layers__item-img.img4 {
-        background-image: url(../img/2-xs.jpg)
+        background-image: url(./img/2-xs.jpg)
     }
 }
 
 .load-cont .layers__item-img.img5 {
-    background-image: url(../img/6.jpg)
+    background-image: url(./img/6.jpg)
 }
 
 @media(max-width:575px) {
     .load-cont .layers__item-img.img5 {
-        background-image: url(../img/6-xs.jpg)
+        background-image: url(./img/6-xs.jpg)
     }
 }
 
 .load-cont .layers__item-img.img6 {
-    background-image: url(../img/11.jpg)
+    background-image: url(./img/11.jpg)
 }
 
 @media(max-width:575px) {
     .load-cont .layers__item-img.img6 {
-        background-image: url(../img/11-xs.jpg)
+        background-image: url(./img/11-xs.jpg)
     }
 }
 
@@ -4385,7 +4385,7 @@ textarea {
 }
 
 [data-controller=blog] .resources-cont .bg-res {
-    background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/resources-bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(./img/resources-bg.jpg);
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -4907,7 +4907,7 @@ textarea {
 }
 
 [data-controller=cine-contenido] .doc-cont .columns .bg1 {
-    background: url(../img/galapagos.jpg);
+    background: url(./img/galapagos.jpg);
     filter: grayscale(100%);
     transition: .25s cubic-bezier(.4, 0, 1, 1)
 }
@@ -4918,7 +4918,7 @@ textarea {
 }
 
 [data-controller=cine-contenido] .doc-cont .columns .bg2 {
-    background: url(../img/from-core-to-sun.jpg);
+    background: url(./img/from-core-to-sun.jpg);
     background-position: 100% !important;
     filter: grayscale(100%);
     transition: .25s cubic-bezier(.4, 0, 1, 1)
@@ -4930,7 +4930,7 @@ textarea {
 }
 
 [data-controller=cine-contenido] .doc-cont .columns .bg3 {
-    background: url(../img/BLUE-SQUAD-BOTON.jpg);
+    background: url(./img/BLUE-SQUAD-BOTON.jpg);
     filter: grayscale(100%);
     transition: .25s cubic-bezier(.4, 0, 1, 1)
 }
@@ -7781,7 +7781,7 @@ textarea {
 }
 
 [data-controller=from-core-to-sun] .banner-cont {
-    background-image: url(../img/bg-home-fcts.png);
+    background-image: url(./img/bg-home-fcts.png);
     background-position: 60%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -8567,7 +8567,7 @@ textarea {
 }
 
 [data-controller=galapagos-evolution] .banner-cont {
-    background-image: url(../img/galapagos-evolution-banner.jpg);
+    background-image: url(./img/galapagos-evolution-banner.jpg);
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -9282,7 +9282,7 @@ textarea {
 }
 
 [data-controller=index]:after {
-    content: url(../img/services1.jpg) url(../img/services2.jpg) url(../img/services3.jpg) url(../img/services4.jpg) url(../img/services5.jpg) url(../img/services6.jpg) url(../img/services7.jpg);
+    content: url(./img/services1.jpg) url(./img/services2.jpg) url(./img/services3.jpg) url(./img/services4.jpg) url(./img/services5.jpg) url(./img/services6.jpg) url(./img/services7.jpg);
     height: 0;
     overflow: hidden;
     position: absolute;
@@ -9292,7 +9292,7 @@ textarea {
 
 @media(max-width:768px) {
     [data-controller=index]:after {
-        content: url(../img/services1-sm.jpg) url(../img/services2-sm.jpg) url(../img/services3-sm.jpg) url(../img/services4-sm.jpg) url(../img/services5-sm.jpg) url(../img/services6-sm.jpg) url(../img/services7-sm.jpg)
+        content: url(./img/services1-sm.jpg) url(./img/services2-sm.jpg) url(./img/services3-sm.jpg) url(./img/services4-sm.jpg) url(./img/services5-sm.jpg) url(./img/services6-sm.jpg) url(./img/services7-sm.jpg)
     }
 }
 
@@ -10846,37 +10846,37 @@ textarea {
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-1 {
-    background-image: url(../img/nosotros1.jpg)
+    background-image: url(./img/nosotros1.jpg)
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-2 {
-    background-image: url(../img/nosotros2.jpg);
+    background-image: url(./img/nosotros2.jpg);
     background-position: 10%
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-3 {
-    background-image: url(../img/nosotros3.jpg)
+    background-image: url(./img/nosotros3.jpg)
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-4 {
-    background-image: url(../img/nosotros4.jpg)
+    background-image: url(./img/nosotros4.jpg)
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-5 {
-    background-image: url(../img/nosotros5.jpg)
+    background-image: url(./img/nosotros5.jpg)
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-6 {
-    background-image: url(../img/nosotros6.jpg)
+    background-image: url(./img/nosotros6.jpg)
 }
 
 [data-controller=quienes-somos] .banner-cont .slide-7 {
-    background-image: url(../img/nosotros7.jpg)
+    background-image: url(./img/nosotros7.jpg)
 }
 
 @media(max-width:575px) {
     [data-controller=quienes-somos] .banner-cont .slide-7 {
-        background-image: url(../img/nosotros7-xs.jpg)
+        background-image: url(./img/nosotros7-xs.jpg)
     }
 }
 
@@ -11365,7 +11365,7 @@ textarea {
 
 [data-controller=recurso] .content-cont .resources-cont .bg-res {
     background-color: #212322;
-    background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/resources-bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(./img/resources-bg.jpg);
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12510,19 +12510,19 @@ textarea {
 }
 
 [data-controller=servicios-produccion] .banner-cont .slide-1 {
-    background-image: url(../img/servicios_produccion4.jpg)
+    background-image: url(./img/servicios_produccion4.jpg)
 }
 
 [data-controller=servicios-produccion] .banner-cont .slide-2 {
-    background-image: url(../img/servicios_produccion3.jpg)
+    background-image: url(./img/servicios_produccion3.jpg)
 }
 
 [data-controller=servicios-produccion] .banner-cont .slide-3 {
-    background-image: url(../img/servicios_produccion2.jpg)
+    background-image: url(./img/servicios_produccion2.jpg)
 }
 
 [data-controller=servicios-produccion] .banner-cont .slide-4 {
-    background-image: url(../img/servicios_produccion1.jpg)
+    background-image: url(./img/servicios_produccion1.jpg)
 }
 
 [data-controller=servicios-produccion] .banner-cont .slide-5 {
