--- a/test.css
+++ b/test.css
@@ -9516,7 +9516,7 @@ textarea {
 }
 
 [data-controller=index] .projects-cont .sld3 {
-    background-image: url(#);
+    background-image: url(./img/1.1.jpg);
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -9537,7 +9537,7 @@ textarea {
 }
 
 [data-controller=index] .projects-cont .sld4 {
-    background-image: url(./img/services4.jpg);
+    background-image: url(./img/1.2.jpg);
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
