--- a/style.css
+++ b/style.css
@@ -104,9 +104,192 @@ a {
   width: 65%;
   margin: 32px auto;
 }
+
+/* section */
+.work-item {
+  margin: 22px auto;
+  width: 88%;
+}
+.work-container h2{
+  text-align: center;
+}
+.work-container .lineBottom {
+  width: 180px;
+  height: 6px;
+  background-color: #ec5e29;
+  margin: 12px auto;
+  margin-bottom: 22px;
+  border-radius: 4px;
+}
+.work-container{
+  background-color: #fff;
+  padding: 50px 0;
+}
+.my-work {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+
+}
+ul.work-list {
+  display: flex;
+  color: #000;
+  justify-content: flex-start;
+  gap: 38px;
+  width: 68%;
+  margin: 0;
+  padding: 22px 0;
+}
+ul.work-list :hover{
+  color: #ec5e29;
+}
+
+ul.work-list li{
+  font-size: calc(12.87805px + .19512vw);
+  font-weight: 500;
+  letter-spacing: 2px;
+  line-height: 20px;
+}
+.work-heading h3 {
+  font-size: 22px;
+  margin-left: 4%;
+}
+
+.vdo h3 {
+  text-align: center;
+  margin: 6% auto;
+  font-size: 1.8rem;
+  font-weight: 800;
+  color: #444;
+}
+.vdo .slider {
+  display: flex;
+  height: 350px;
+  max-height: auto;
+  overflow-y: hidden;
+  overflow-x: scroll !important;
+  padding: 16px;
+  transform: scroll(calc(var(--i,0)/var(--n)*-100%));
+  scroll-behavior: smooth;
+}
+.slider::-webkit-scrollbar {
+  height: 5px;
+  width: 150px;
+  display: none;
+}
+.slider::-webkit-scrollbar-track {
+  background: transparent;
+}
+.slider::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.slider::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.slider img:hover {
+  transform: scale(1.05);
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.15);
+}
+.vdo .slide {
+
+  position: relative;
+}
+.slide img {
+  height: 84%;
+  width: 246px;
+  margin: 0 10px;
+  object-fit: cover;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: .25s ease-in-out;
+}
+.control-prev-btn {
+  position: absolute;
+  /* top: 0; */
+  left: 0;
+  background-color: rgba(255,255,255,0.55);
+  height: 100px;
+  line-height: 100px;
+  width: 45px;
+  text-align: center;
+  box-shadow: 0 1px 3px #888;
+  user-select: none;
+  color: #444;
+  cursor: pointer;
+}
+.control-next-btn {
+  position: absolute;
+  /* top: 0; */
+  right: 0;
+  background-color: rgba(255,255,255,0.55);
+  height: 100px;
+  line-height: 100px;
+  width: 45px;
+  text-align: center;
+  box-shadow: 0 1px 3px #888;
+  user-select: none;
+  color: #444;
+  cursor: pointer;
+}
+/* .slide img.zoomed{
+   width: 500px;
+   height: 600px;
+   position: relative;
+   left: 0%;
+   top: 0%;
+   z-index: 1000;
+   transform: scale(1) translatey(0) !important; 
+ 
+}
+.overlay{
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   background: rgba(0,0,0,.45);
+   top: 0;
+   display: none;
+}
+.overlay.active{
+ display: block;
+} */
+@media only screen and (max-width: 420px) {
+  .slider {
+    padding: 0;
+ }
+  .vdo .slide {
+    padding: 10px 20px;
+ }
+  .slide img {
+    margin: 0;
+ }
+  .control-prev-btn {
+    top: 37%;
+ }
+  .control-next-btn {
+    top: 37%;
+ }
+}
 /* header img slider End */
 @media screen and (max-width:900px) {
   .relav img {
     width: 118px;
+}
+
+/* my-work */
+ul.work-list {
+  display: flex;
+  color: #000;
+  justify-content: center;
+  gap: 23px;
+  width: 100%;
+  margin: 0;
+  padding: 22px 0;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+.work-heading h3 {
+  font-size: 22px;
+  text-align: center;
 }
 }
