--- a/style.css
+++ b/style.css
@@ -113,13 +113,14 @@ a {
 .work-container h2{
   text-align: center;
 }
-.work-container .lineBottom {
+.work-container hr {
   width: 180px;
   height: 6px;
   background-color: #ec5e29;
   margin: 12px auto;
   margin-bottom: 22px;
   border-radius: 4px;
+  opacity: 1;
 }
 .work-container{
   background-color: #fff;
@@ -231,27 +232,75 @@ ul.work-list li{
   color: #444;
   cursor: pointer;
 }
-/* .slide img.zoomed{
-   width: 500px;
-   height: 600px;
-   position: relative;
-   left: 0%;
-   top: 0%;
-   z-index: 1000;
-   transform: scale(1) translatey(0) !important; 
- 
+
+
+.clearfix a {
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
 }
-.overlay{
-   position: absolute;
-   height: 100%;
-   width: 100%;
-   background: rgba(0,0,0,.45);
-   top: 0;
-   display: none;
+.clearfix a :hover{
+  color: #ec5e29 !important;
 }
-.overlay.active{
- display: block;
-} */
+nav{
+    width: 80%;
+    float: right;
+}
+nav ul{
+	width: 100%;
+}
+
+nav ul li {
+    float: left;
+    width: 20%;
+    line-height: 60px;
+    text-align: center;
+}
+section>p{
+	text-align: center;
+	margin: 30px auto;
+	padding: 0 10%;
+}
+section>div{
+	width: 90%;
+	margin: 0 auto;
+	display: none;
+}
+section>div.activ{
+	display: block;
+  color: #ec5e29;
+}
+div.content h2{
+	margin: 10px 0 40px 20%;
+}
+div.content p{
+    display: block;
+    margin: 0 auto;
+	width: 60%;
+    line-height: 1.7;
+}
+
+@media screen and (max-width: 600px) {
+	div.content h2{
+		margin: 10px 0 40px 5%;
+	}
+	div.content p{
+		width: 95%; 
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 420px) {
   .slider {
     padding: 0;
